changes made inside binder

--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "RAW CELL\n",
     "\n",
-    "This Cell is a 'Raw' Cell - it's just boring text."
+    "This Cell is a 'Raw' Cell - it's just exciting text."
    ]
   },
   {
@@ -99,16 +99,6 @@
     "\n",
     "\n",
     "Now add a couple of cell of your own ..."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "see if you can delete this cell - tip, checkout the *Edit* menu ... or even try right-click\n",
-    "\n"
    ]
   },
   {
