changes made inside binder

--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -92,10 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg=60"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_kg+5"
+   ]
   },
   {
    "cell_type": "markdown",
